feat(server): remove obsolete Confluence feature (#2698)
